@@ -16,7 +16,7 @@
 package io.airlift.http.server;
 
 import io.airlift.stats.CounterStat;
-import io.airlift.stats.MeterStat;
+import io.airlift.stats.DistributionStat;
 import io.airlift.stats.TimedStat;
 import io.airlift.units.Duration;
 import org.weakref.jmx.Flatten;
@@ -29,24 +29,24 @@ public class RequestStats
 {
     private final CounterStat request;
     private final TimedStat requestTime;
-    private final MeterStat readBytes;
-    private final MeterStat writtenBytes;
+    private final DistributionStat readBytes;
+    private final DistributionStat writtenBytes;
 
     @Inject
     public RequestStats()
     {
         request = new CounterStat();
         requestTime = new TimedStat();
-        readBytes = new MeterStat();
-        writtenBytes = new MeterStat();
+        readBytes = new DistributionStat();
+        writtenBytes = new DistributionStat();
     }
 
     public void record(String method, int responseCode, long requestSizeInBytes, long responseSizeInBytes, Duration schedulingDelay, Duration requestProcessingTime)
     {
         request.update(1);
         requestTime.addValue(requestProcessingTime);
-        readBytes.update(requestSizeInBytes);
-        writtenBytes.update(responseSizeInBytes);
+        readBytes.add(requestSizeInBytes);
+        writtenBytes.add(responseSizeInBytes);
     }
 
     @Managed
@@ -65,14 +65,14 @@ public class RequestStats
 
     @Managed
     @Nested
-    public MeterStat getReadBytes()
+    public DistributionStat getReadBytes()
     {
         return readBytes;
     }
 
     @Managed
     @Nested
-    public MeterStat getWrittenBytes()
+    public DistributionStat getWrittenBytes()
     {
         return writtenBytes;
     }
